Ajout et design des boutons Filtres

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -44,10 +44,12 @@
 		</section>
 		<section id="portfolio">
 			<h2>Mes Projets</h2>
-			<button id="btn-filtrer-tous">Filtrer le portofolio </button>
-			<button id="btn-filtrer-objets">Filtrer le portofolio par Objets</button>
-			<button id="btn-filtrer-appartements">Filtrer le portofolio par Appartements</button>
-			<button id="btn-filtrer-hotels & restaurants">Filtrer le portofolio par Hotels & restaurants</button>
+			<div id="Filtres">
+				<button id="btn-filtrer-tous">Tous</button>
+				<button id="btn-filtrer-objets">Objets</button>
+				<button id="btn-filtrer-appartements">Appartements</button>
+				<button id="btn-filtrer-hotels-restaurants">Hôtels & restaurants</button>
+			</div>
 			<div class="gallery">
 				<figure>
 					<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
